funciones varias de sass realizadas

--- a/pages/paletas.html
+++ b/pages/paletas.html
@@ -168,6 +168,29 @@
                 </div>
             </div><!-- Carouse fin -->
         </section>
+        <section>
+            <h3 class="separadores">Galeria</h3>
+            <div class="galeria">
+                <div class="galeria-foto">
+                    <img src="../assets/fotogaleria1.webp" alt="paleta">
+                </div>
+                <div class="galeria-foto">
+                    <img src="../assets/fotogaleria2.webp" alt="paleta">
+                </div>
+                <div class="galeria-foto">
+                    <img src="../assets/fotogaleria3.webp" alt="paleta">
+                </div>
+                <div class="galeria-foto">
+                    <img src="../assets/fotogaleria4.webp" alt="paleta">
+                </div>
+                <div class="galeria-foto">
+                    <img src="../assets/fotogaleria5.webp" alt="paleta">
+                </div>
+                <div class="galeria-foto">
+                    <img src="../assets/fotogaleria6.webp" alt="paleta">
+                </div>
+            </div>
+        </section>
 
         <!-- footer inicio -->
         <footer class="bg-dark py-5 mt-5 footerc">
