--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,6 +12,8 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/estilos.css">
     <title>Queespadel?</title>
+    <meta name="description" content="¿Tienes alguna pregunta sobre el pádel? ¡Contáctanos! En QueEsPadel? estamos aquí para ayudarte. Envíanos tus consultas, comentarios o sugerencias a través de nuestro formulario de contacto.">
+    <meta name="keywords" content="pádel, contacto, formulario de contacto, consultas, comentarios, sugerencias, QueEsPadel?,imagenes">
 </head>
 
 <body class="bcontacto">
