--- a/pages/pelotas.html
+++ b/pages/pelotas.html
@@ -12,6 +12,8 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/estilos.css">
     <title>Queespadel?</title>
+    <meta name="description" content="Descubre todo sobre las pelotas de pádel en QueEsPadel? Explora los diferentes tipos de pelotas, desde las de competición hasta las de entrenamiento, iniciación, alta altitud y baja altitud. Conoce las características de cada tipo de pelota y cómo influyen en el juego.">
+    <meta name="keywords" content="pádel, pelotas pádel, tipos de pelotas, pelotas de competición, pelotas de entrenamiento, pelotas de iniciación, pelotas de alta altitud, pelotas de baja altitud">
 </head>
 
 <body>
