--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/estilos.css">
+    <link rel="shortcut icon" href="assets/logoPelota.png" type="image/x-icon">
     <title>Queespadel?</title>
     <meta name="description" content="Descubre el apasionante mundo del pádel en nuestro sitio. Encuentra información sobre las reglas, técnicas y equipamiento necesario para disfrutar al máximo de este deporte. ">
     <meta name="keywords" content="pádel, deporte, pádel cómo jugar, paletas, pelotas, contacto, reglas pádel, origen pádel, Enrique Corcuera, historia pádel, federación internacional de pádel, torneos pádel, circuito profesional pádel, jugadores profesionales pádel, ranking pádel">
