--- a/pages/comojugar.html
+++ b/pages/comojugar.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/estilos.css">
+    <link rel="shortcut icon" href="../assets/logoPelota.png" type="image/x-icon">
     <title>Queespadel?</title>
     <meta name="description" content="Descubre todo lo que necesitas saber sobre el pádel en QueEsPadel? Explora cómo jugar, aprende las reglas básicas, conoce los golpes fundamentales como el saque, la bandeja, la volea y el smash, y sumérgete en la diversión y la emoción de este deporte apasionante.">
     <meta name="keywords" content="pádel, deporte, cómo jugar pádel, reglas básicas pádel, saque, bandeja, volea, smash, paletas pádel, pelotas pádel">
