--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/estilos.css">
+    <link rel="shortcut icon" href="../assets/logoPelota.png" type="image/x-icon">
     <title>Queespadel?</title>
     <meta name="description" content="¿Tienes alguna pregunta sobre el pádel? ¡Contáctanos! En QueEsPadel? estamos aquí para ayudarte. Envíanos tus consultas, comentarios o sugerencias a través de nuestro formulario de contacto.">
     <meta name="keywords" content="pádel, contacto, formulario de contacto, consultas, comentarios, sugerencias, QueEsPadel?,imagenes">
