--- a/pages/paletas.html
+++ b/pages/paletas.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/estilos.css">
+    <link rel="shortcut icon" href="../assets/logoPelota.png" type="image/x-icon">
     <title>Queespadel?</title>
     <meta name="description" content="Descubre todo sobre el pádel y los diferentes tipos de paletas en QueEsPadel? Explora cómo influyen las formas de las paletas en el juego, conoce los tipos de formas como redonda, lágrima y diamante, y descubre qué tipo de paleta se adapta mejor a tu estilo de juego. Encuentra información sobre palas de control, palas de potencia, palas intermedias, palas de iniciación y palas personalizadas.">
     <meta name="keywords" content="pádel, paletas pádel, tipos de paletas, formas de paletas, paletas redondas, paletas lágrima, paletas diamante, palas de control, palas de potencia, palas intermedias, palas de iniciación, palas personalizadas">
